--- a/todo.txt
+++ b/todo.txt
@@ -34,69 +34,41 @@ perhaps lift the sub-procs to the global space (to allow recursion)
 - allow file manipulation, probably with file handles
 
 
-
-allow prefixing of code blocks (presumably used by preprocessor to also
-implement qualified imports)
+- module system somewhat similar to haskell
 ```
-{#prefix:abc#
-dec x <- 2;
-dec y <- 3;
-}
-@ abc.x;
-@ abc.y;
-```
+{-List.mr-}
 
-```
-{#region#
--- like a declaration but private, only allowed at the top-level
-static x <- 3;
-static fn f a {...}
-}
+-- must be on the first line 
+--
+--      manifest
+module (head, tail);
+fn head ...
+fn tail ...
+-- if not included in manifest, it is private
+fn privatefn ...
 
-@x; -- illegal, vars declared in a region as `static` cannot be
-    --  be accessed outside it.
+
+{-another file-}
+import List;
+import Dir.F (a,b) as F;
 ```
 
-
-regions can be nested, of course
+the manifest can be prefixed with `including` or `excluding`
 ```
-{#region#
-{#prefix:std#
-    {#region#
-    {#prefix:list#
-        data List ...
-        static fn head xs {...}
-    }
-    }
-    fn add1 n {...}
-}
-}
-
-std.add1 3;
-list.Cons 3 list.Null;
-dec xs <- 1 list.: Null;
-list.head $ xs -- illegal, `head` is static
+module including (a,b,...);
+module excluding (a,b,...);
+module (a,b,...); -- same as `module including`
 ```
 
-
-qualified import
+imports have the same feature
 ```
-#qualifiedInclude <list.mr> list
-```
-is equivalent to
-```
-{#region#
-{#prefix:list#
--- code from `std.mr` here
-}
-}
+import List including (head,tail);
+import List excluding (head,tail);
+import List (head,tail);
 ```
 
-
-
-future: 
-
-- allow absolute imports
+the `as` keyword can be used with imports to prefix the imported terms
 ```
-#include '/home/f/a.mr'
+import List as List;
+import Data.F excluding (a,b) as F;
 ```
